--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
     "name": "ih-leaflet-canvaslayer-field",
-    "version": "1.5.4",
+    "version": "1.5.5",
     "description": "A set of layers using canvas to draw ASCIIGrid or GeoTIFF files. This includes a basic raster layer (*ScalaField*) and an animated layer for vector fields, such as wind or currents (*VectorFieldAnim*)",
     "main": "index.js",
     "dependencies": {
         "@turf/inside": "^5.0.0",
         "chroma-js": "^2.4.2",
         "d3": "7.8.5",
-        "geotiff": "2.0.7",
+        "geotiff": "2.1.2",
         "leaflet": ">=1.0.3",
-        "npm": "^9.6.7"
+        "npm": "^10.4.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
-        "babel-loader": "^9.1.2",
-        "babel-preset-es2015": "^6.24.1",
-        "eslint": "^8.42.0",
+        "babel-loader": "^9.1.3",
+        "@babel/preset-env": "^7.23.9",
+        "eslint": "^8.56.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-loader": "^4.0.2",
-        "eslint-plugin-import": "^2.27.5",
+        "eslint-webpack-plugin": "^4.0.1",
+        "eslint-plugin-import": "^2.29.1",
         "eslint-webpack": "^3.12.2",
-        "fs-extra": "^11.1.1",
-        "jasmine": "^5.0.0",
-        "jasmine-core": "^5.0.0",
+        "fs-extra": "^11.2.0",
+        "jasmine": "^5.1.0",
+        "jasmine-core": "^5.1.1",
         "karma": "^6.4.2",
         "karma-chrome-launcher": "^3.2.0",
         "karma-cli": "^2.0.0",
         "karma-jasmine": "^5.1.0",
-        "webpack": "^5.85.0",
-        "webpack-cli": "^5.1.1",
-        "webpack-dev-server": "^4.15.0",
-        "webpack-shell-plugin": "^0.5.0"
+        "webpack": "^5.90.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1",
+        "webpack-shell-plugin-next": "^2.3.1"
     },
     "scripts": {
-        "start": "webpack --watch",
-        "build": "webpack -p",
+        "start": "webpack --watch --mode development",
+        "build": "webpack --mode production",
         "web": "webpack-dev-server",
         "test": "karma start"
     },
