--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
     "name": "ih-leaflet-canvaslayer-field",
-    "version": "1.5.6",
+    "version": "1.5.7",
     "description": "A set of layers using canvas to draw ASCIIGrid or GeoTIFF files. This includes a basic raster layer (*ScalaField*) and an animated layer for vector fields, such as wind or currents (*VectorFieldAnim*)",
     "main": "index.js",
     "dependencies": {
-        "@turf/boolean-point-in-polygon": "^6.5.0",
+        "@turf/boolean-point-in-polygon": "^7.0.0",
         "chroma-js": "^2.4.2",
-        "d3": "7.8.5",
+        "d3": "7.9.0",
         "geotiff": "2.1.3",
-        "leaflet": ">=1.0.3",
-        "npm": "^10.4.0"
+        "leaflet": ">=1.0.3"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.24.8",
+        "@types/geojson": "^7946.0.14",
         "babel-core": "^6.26.3",
         "babel-loader": "^9.1.3",
-        "@babel/preset-env": "^7.23.9",
-        "eslint": "^8.57.0",
+        "eslint": "^9.7.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-webpack-plugin": "^4.0.1",
         "eslint-plugin-import": "^2.29.1",
         "eslint-webpack": "^3.12.2",
+        "eslint-webpack-plugin": "^4.2.0",
         "fs-extra": "^11.2.0",
         "jasmine": "^5.1.0",
         "jasmine-core": "^5.1.2",
@@ -27,9 +27,9 @@
         "karma-chrome-launcher": "^3.2.0",
         "karma-cli": "^2.0.0",
         "karma-jasmine": "^5.1.0",
-        "webpack": "^5.90.3",
+        "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.2",
+        "webpack-dev-server": "^5.0.4",
         "webpack-shell-plugin-next": "^2.3.1"
     },
     "scripts": {
