--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
     "name": "ih-leaflet-canvaslayer-field",
-    "version": "1.5.8",
+    "version": "1.5.9",
     "description": "A set of layers using canvas to draw ASCIIGrid or GeoTIFF files. This includes a basic raster layer (*ScalaField*) and an animated layer for vector fields, such as wind or currents (*VectorFieldAnim*)",
     "main": "index.js",
     "dependencies": {
-        "@turf/boolean-point-in-polygon": "^7.1.0",
-        "chroma-js": "^3.1.1",
+        "@turf/boolean-point-in-polygon": "^7.2.0",
+        "chroma-js": "^3.1.2",
         "d3": "7.9.0",
         "geotiff": "2.1.3",
-        "leaflet": ">=1.0.3"
+        "leaflet": "^1.9.4"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.25.4",
-        "@types/geojson": "^7946.0.14",
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "@types/geojson": "^7946.0.15",
         "babel-core": "^6.26.3",
-        "babel-loader": "^9.1.3",
-        "eslint": "^9.10.0",
+        "babel-loader": "^9.2.1",
+        "eslint": "^9.18.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-import": "^2.30.0",
+        "eslint-plugin-import": "^2.31.0",
         "eslint-webpack": "^3.12.2",
         "eslint-webpack-plugin": "^4.2.0",
         "fs-extra": "^11.2.0",
-        "jasmine": "^5.3.0",
-        "jasmine-core": "^5.3.0",
+        "jasmine": "^5.5.0",
+        "jasmine-core": "^5.5.0",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
         "karma-cli": "^2.0.0",
         "karma-jasmine": "^5.1.0",
-        "webpack": "^5.94.0",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.1.0",
-        "webpack-shell-plugin-next": "^2.3.1"
+        "webpack": "^5.97.1",
+        "webpack-cli": "^6.0.1",
+        "webpack-dev-server": "^5.2.0",
+        "webpack-shell-plugin-next": "^2.3.2"
     },
     "scripts": {
         "start": "webpack --watch --mode development",
